# Data-analysis

./: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  redash_q.sql
db/: 1-create-table.sql  2-insert-data.sql
generator/: data_generator.py  database.py  event_generator.py  models.py  player_generator.py  points.py  points_calculator.py
