[project]
name = "data-analysis"
version = "0.1.0"
description = "Мини-система сбора и анализа игровых данных"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "faker>=19.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator"]

[tool.uv]
dev-dependencies = []
